tests/paczka1/small_fuzzy/68442118.err
Error in line 5: x2nOW A912 29,4
Error in line 6: x2nOW S538 88,1
Error in line 8: Bxv5 S110 33,6
